gobmkida/c1/findlib
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/findlib/src/engine/board.c:1869:27: error: use of undeclared identifier 'dword_A741AC'
if ( !byte_9AA89F[v10] && dword_A741AC[v10] != v7 ) 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/findlib/src/engine/board.c:1869:7: error: use of undeclared identifier 'byte_9AA89F'
if ( !byte_9AA89F[v10] && dword_A741AC[v10] != v7 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/findlib/src/engine/board.c:1873:1: error: use of undeclared identifier 'dword_A741AC'
dword_A741AC[v10] = v7; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/findlib/src/engine/board.c:1877:7: error: use of undeclared identifier 'byte_9AA88C'
if ( !byte_9AA88C[v10] && string_number[v10 + 384] != v7 ) 
      ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/findlib/src/obj/1/board.o] Error 1
